--- a/style.css
+++ b/style.css
@@ -1,47 +1,45 @@
-*{
-    font-family:Helvetica, sans-serif;
-}
-body{
-   background-image: radial-gradient(circle, rgb(23, 24, 29), rgb(143, 1, 36), rgb(153, 4, 17));
+body {
+    margin: 0px;
+    height: 100vh;
+    /* background: rgb(167,0,155);
+    background: linear-gradient(152deg, rgba(167,0,155,1) 0%, rgba(233,63,255,1) 46%, rgba(167,0,141,1) 100%); */
+    background-color: #FFE53B;
+    background-image: linear-gradient(147deg, #FFE53B 0%, #FF2525 74%);
+
 }
 
-.container{
-    max-width: 600px;
-    margin: auto;
-    margin-top: 25px;
-}
-.row{
-    display: inline;
-}
-
-@media only screen and (min-width: 4px) and (max-width: 959px){
- 
-   
-.col-sm{
-    width: 300px;
-    height: 350px;
-    float: left;
-}
-}
-.left-a{
-    
-   background-color: #6CDEC9;
-   
+.main--container {
+    display: flex;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    box-shadow:
+    0 2.8px 2.2px rgba(0, 0, 0, 0.192),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.288),
+    0 12.5px 10px rgba(0, 0, 0, 0.253),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.205),
+    0 41.8px 33.4px rgba(0, 0, 0, 0.226),
+    0 100px 80px rgba(0, 0, 0, 0.233)
 }
 
-.title-a{
-    margin-top: 50px !important;
-    text-align: center;
-    color: azure;
-    font-size: 10px;
-    margin: auto;
-}
-.bird-a{
-    width: 200px;
+.grid-1, .grid-2 {
+    height: 600px;
+    width: 500px;  
 }
 
-.left-b{
-    
-    background-color: #36485F;
-    
- }
+.grid-1 {
+    background-color: white;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+.grid-2 {
+    background: rgb(17,81,96);
+    background: linear-gradient(152deg, rgba(17,81,96,1) 0%, rgba(15,61,74,1) 46%, rgba(11,55,82,1) 100%);
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
