--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 }
+
 .grid-2 {
     background: rgb(17,81,96);
     background: linear-gradient(152deg, rgba(17,81,96,1) 0%, rgba(15,61,74,1) 46%, rgba(11,55,82,1) 100%);
@@ -46,9 +47,93 @@ body {
     border-bottom-right-radius: 10px;
 }
 
-.grid-2 form {
-    margin: 70px;
+.signin-signup-main {
+    margin: 0px 70px 0px 70px;
 }
+/* start : Signin */
+.signin-main__div {
+    display: none;
+}
+.main-heading{
+    margin-top: 70px;
+    margin-bottom: 25px;
+    margin-left: 70px;
+}
+
+.signin,.signup{
+    font-size: 18px;
+    text-decoration: none;
+    color: rgb(206,206,206);
+}
+
+.span-or{
+    color: rgb(119,119,119);
+    font-size: 13px;
+    display: inline-block;
+    padding: 5px;
+}
+
+.email-field,.password-field{
+    margin-bottom: 25px;
+}
+
+.email-label,.pass-label{
+    font-size: 13px;
+    color: rgb(206,206,206);
+    text-transform: uppercase;
+}
+
+input[type=email],input[type=password]{
+    background-color: transparent;
+    color: orange;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid rgb(119,119,119);
+    padding: 10px 0px;
+    width: 100%;
+}
+
+.login-button{
+    background-color: rgb(100,215,196); 
+    color: rgb(206,206,206);
+    border: none;
+    height: 30px;
+    width: 100px;
+    margin-right: 10px;
+    font-size: 13px;
+    border-radius: 30px;
+    outline: none;
+    box-shadow: 0 2.8px 5px rgba(0, 0, 0, 0.212),
+    0 3.0px 7.5px rgba(0, 0, 0, 0.205),
+    0 3.4px 10.5px rgba(0, 0, 0, 0.205),
+    0 4.1px 17.5px rgba(0, 0, 0, 0.205);
+    background-image: linear-gradient(161deg, #fe8c00 10%, #ff5628 51%, #fe8c00 100%);
+    cursor: pointer;
+}
+
+.login-button:hover {
+    box-shadow: 0 2.8px 5px rgba(0, 0, 0, 0.212),
+    0 3.0px 7.5px rgba(0, 0, 0, 0.205),
+    0 3.4px 10.5px rgba(0, 0, 0, 0.205),
+    0 4.1px 17.5px rgba(0, 0, 0, 0.205),
+    0 6.1px 21.5px rgba(0, 0, 0, 0.205),
+    0 10px 40.5px rgba(0, 0, 0, 0.205);
+    background-position: right center;
+}
+
+.reset-pass{
+    text-decoration: none;
+    color: rgb(119,119,119);
+    font-size: 13px;
+}
+
+/* start: signup */
+
+/* .grid-2 form {
+    margin: 70px;
+} */
+
+
 .full-name__label, .password__label, .email__label {
     font-size: 13px;
     font-weight: 500;
@@ -118,7 +203,27 @@ input:checked {
     text-decoration: none;
     font-weight: 500;
 }
+a.tos-link {
+    position: relative;
+}
 
+a.tos-link:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 0;
+    bottom: 0;
+    left: 0;
+    background: white;
+    visibility: hidden;
+    transition: all 0.3s ease-in-out;
+  }
+
+  a.tos-link:hover:before {
+    visibility: visible;
+    height: 2px;
+  }
+  
 .signup__button {
     height: 30px;
     width: 100px;
@@ -141,9 +246,11 @@ input:checked {
     0 6.1px 21.5px rgba(0, 0, 0, 0.205),
     0 10px 40.5px rgba(0, 0, 0, 0.205)
 }
-.signup__button {background-image: linear-gradient(161deg, #fe8c00 10%, #ff5628 51%, #fe8c00 100%)}
+.signup__button {background-image: linear-gradient(161deg, #ff5628 11%, #ff8018 100%)}
 .signup__button:hover { background-position: right center; }
-
+.signup {
+    border-bottom: 1px solid orange;
+}
 .signin__link {
     font-size: 13px;
     color: rgb(119, 119, 119);
